--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -6,5 +6,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
+      - name: pulling git repo
+        uses: actions/checkout@v2
       - name: say hello
-        uses: echo "Hello World"
+        run: echo "Hello World"
